# zoigraph

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  release.yml
scripts/: export_events.py  llm_phantom.py  seed_corpus_unix.py
src/: main.cpp
src/app/: ask.cpp  ask.h  clock.h  hotkeys.cpp  hotkeys.h  paths.cpp  paths.h  phantom_lifecycle.cpp  phantom_lifecycle.h  pick.cpp  pick.h  pin.cpp  pin.h  promote.cpp  promote.h  query_responder.cpp  query_responder.h  query_token.cpp  query_token.h  session.cpp  session.h  settings.cpp  settings.h
src/graph/: cluster.cpp  cluster.h  graph_buffer.cpp  graph_buffer.h  picks.cpp  picks.h  ppr.cpp  ppr.h  timeline.cpp  timeline.h  types.h  wikilinks.cpp  wikilinks.h
src/input/: escape_wipe.cpp  escape_wipe.h
src/macros/: bones.cpp  bones.h  rabbit_hole.cpp  rabbit_hole.h
src/persistence/: db.cpp  db.h  project_store.cpp  project_store.h  secure_wipe.cpp  secure_wipe.h  seed.cpp  seed.h
src/physics/: barnes_hut.cpp  barnes_hut.h  forces.cpp  forces.h  physics_thread.cpp  physics_thread.h
src/render/: camera.cpp  camera.h  composite.cpp  composite.h  draw.cpp  draw.h  imgui_theme.cpp  imgui_theme.h  labels.cpp  labels.h  scene.cpp  scene.h  shaders.h  sizes.h
src/telemetry/: phantom.h  phantom_buffer.cpp  phantom_buffer.h  phantom_parse.cpp  phantom_parse.h  query_protocol.cpp  query_protocol.h  query_thread.cpp  query_thread.h  telemetry_thread.cpp  telemetry_thread.h
src/ui/: bones_panel.cpp  bones_panel.h  cli_tab.cpp  cli_tab.h  help_tab.cpp  help_tab.h  inspector_tab.cpp  inspector_tab.h  project_tab.cpp  project_tab.h  toolbar_tab.cpp  toolbar_tab.h
tests/: CMakeLists.txt  test_ask.cpp  test_barnes_hut.cpp  test_cli.cpp  test_cluster.cpp  test_db.cpp  test_escape_wipe.cpp  test_forces.cpp  test_graph_buffer.cpp  test_integrator.cpp  test_labels.cpp  test_paths.cpp  test_phantom.cpp  test_phantom_lifecycle.cpp  test_picks.cpp  test_placeholder.cpp  test_ppr.cpp  test_project_store.cpp  test_promote.cpp  test_query_protocol.cpp  test_query_responder.cpp  test_query_token.cpp  test_rabbit.cpp  test_secure_wipe.cpp  test_seed.cpp  test_session.cpp  test_settings.cpp  test_timeline.cpp  test_wikilinks.cpp
tools/: bench_scale.cpp
